tests/ui/opts/crate_arg_without_equals.stderr
error: expected `=`
 --> tests/ui/opts/crate_arg_without_equals.rs:4:16
  |
4 | #[funcmap(crate("fake_funcmap"))]
  |                ^^^^^^^^^^^^^^^^
